# mongo-cc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
sample_outputs/kitchensink-main/src/main/java/org/jboss/as/quickstarts/kitchensink/: Main_commented.java
sample_outputs/kitchensink-main/src/main/java/org/jboss/as/quickstarts/kitchensink/config/: ApplicationConfiguration_commented.java
sample_outputs/kitchensink-main/src/main/java/org/jboss/as/quickstarts/kitchensink/controller/: MemberController_commented.java
sample_outputs/kitchensink-main/src/main/java/org/jboss/as/quickstarts/kitchensink/data/: MemberListProducer_commented.java  MemberRepository_commented.java
sample_outputs/vehicle-management/: Main.java  Main_commented.java
sample_outputs/vehicle-management/service/: VehicleService_commented.java
sample_outputs/vehicle-management/vehicle/: Car.java  Car_commented.java  MathUtils.java  MathUtils_commented.java  Truck.java  Truck_commented.java  Vehicle_commented.java
sample_repos/vehicle-management/vehicle/: Car.java  MathUtils.java  Truck.java
src/: main.py  utils.py
src/code_intelligence/: arch_diagram_generator.py  comment_generator.py  embedder.py
src/common/: logger.py  retry.py  types.py  utils.py
src/llm/: llm_client.py  prompts.py
src/parser/: code_parser.py  generate_chunk_summaries.py
tests/: conftest.py
tests/data/vehicle-management/service/: VehicleService.java
tests/data/vehicle-management/vehicle/: Car.java  Vehicle.java
tests/parser/: test_chunk_summaries.py  test_parser.py
(+8 files in other folders)
